// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playlist Controls Renders correctly 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-flex-end"
>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
    tabindex="0"
    title="Shuffle"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-icon-1"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M10.59 9.17L5.41 4 4 5.41l5.17 5.17 1.42-1.41zM14.5 4l2.04 2.04L4 18.59 5.41 20 17.96 7.46 20 9.5V4h-5.5zm.33 9.41l-1.41 1.41 3.13 3.13L14.5 20H20v-5.5l-2.04 2.04-3.13-3.13z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
    style="color: rgb(230, 0, 0);"
    tabindex="0"
    title="Repeat"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-icon-1 MuiSvgIcon-colorSecondary"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 7h10v3l4-4-4-4v3H5v6h2V7zm10 10H7v-3l-4 4 4 4v-3h12v-6h-2v4z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <a
    href="/Queue"
    title="Queue"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-1"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 10h12v2H4zm0-4h12v2H4zm0 8h8v2H4zm10 0v6l5-3z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </a>
</div>
`;

exports[`Playlist Controls Renders correctly with repeat 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-flex-end"
>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
    tabindex="0"
    title="Shuffle"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-icon-2"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M10.59 9.17L5.41 4 4 5.41l5.17 5.17 1.42-1.41zM14.5 4l2.04 2.04L4 18.59 5.41 20 17.96 7.46 20 9.5V4h-5.5zm.33 9.41l-1.41 1.41 3.13 3.13L14.5 20H20v-5.5l-2.04 2.04-3.13-3.13z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
    style="color: rgb(230, 0, 0);"
    tabindex="0"
    title="Repeat"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-icon-2"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 7h10v3l4-4-4-4v3H5v6h2V7zm10 10H7v-3l-4 4 4 4v-3h12v-6h-2v4z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <a
    href="/Queue"
    title="Queue"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-2"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 10h12v2H4zm0-4h12v2H4zm0 8h8v2H4zm10 0v6l5-3z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </a>
</div>
`;

exports[`Playlist Controls Renders correctly with repeat song 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-flex-end"
>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
    tabindex="0"
    title="Shuffle"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-icon-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M10.59 9.17L5.41 4 4 5.41l5.17 5.17 1.42-1.41zM14.5 4l2.04 2.04L4 18.59 5.41 20 17.96 7.46 20 9.5V4h-5.5zm.33 9.41l-1.41 1.41 3.13 3.13L14.5 20H20v-5.5l-2.04 2.04-3.13-3.13z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
    style="color: rgb(230, 0, 0);"
    tabindex="0"
    title="Repeat"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-icon-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 7h10v3l4-4-4-4v3H5v6h2V7zm10 10H7v-3l-4 4 4 4v-3h12v-6h-2v4zm-4-2V9h-1l-2 1v1h1.5v4H13z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <a
    href="/Queue"
    title="Queue"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-3"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 10h12v2H4zm0-4h12v2H4zm0 8h8v2H4zm10 0v6l5-3z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </a>
</div>
`;

exports[`Playlist Controls Renders correctly with shuffle 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-flex-end"
>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
    tabindex="0"
    title="Shuffle"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-icon-4"
        focusable="false"
        style="color: rgb(230, 0, 0);"
        viewBox="0 0 24 24"
      >
        <path
          d="M10.59 9.17L5.41 4 4 5.41l5.17 5.17 1.42-1.41zM14.5 4l2.04 2.04L4 18.59 5.41 20 17.96 7.46 20 9.5V4h-5.5zm.33 9.41l-1.41 1.41 3.13 3.13L14.5 20H20v-5.5l-2.04 2.04-3.13-3.13z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
    style="color: rgb(230, 0, 0);"
    tabindex="0"
    title="Repeat"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-icon-4 MuiSvgIcon-colorSecondary"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 7h10v3l4-4-4-4v3H5v6h2V7zm10 10H7v-3l-4 4 4 4v-3h12v-6h-2v4z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <a
    href="/Queue"
    title="Queue"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-4"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 10h12v2H4zm0-4h12v2H4zm0 8h8v2H4zm10 0v6l5-3z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </a>
</div>
`;
